# bookmate

./: .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
src/core/: logger_utils.py  settings.py
src/core/db/: mongo.py
src/data_pipeline/: __init__.py
src/data_pipeline/pdf/: __init__.py  cleaner.py  dispatcher.py  extractor.py
src/models/mongo/: __init__.py  pdf_document.py
